src/test/compile-fail/vector-no-ann.rs
// xfail-stage0

// error-pattern:cannot determine a type
fn main() -> () {
  auto foo = [];
}
